fix: contact-icon alignment

--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -46,4 +46,8 @@
   .contact-action {
     width: 100%;
   }
+
+  .email-form {
+    align-self: start;
+  }
 }
